<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:strokeColor="@color/green_light">
            <LinearLayout
                android:id="@+id/lnl_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">
                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/registro_de_monedas"
                    android:textAllCaps="true"
                    android:textSize="20sp">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputcountry"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pa_s"
                    android:paddingTop="5dp"
                    android:padding="10dp"
                    app:helperText="*Requirido"
                    app:helperTextTextColor="@color/red"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:strokeColor="@color/green_light"
                        android:hint="@string/pa_s" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputcountryCoin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/coin_name"
                    android:paddingTop="5dp"
                    android:padding="10dp"
                    app:helperText="*Requirido"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_countryCoin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:strokeColor="@color/green_light"
                        android:hint="@string/coin_name" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCoinSymbol"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/symbol_coin"
                    android:paddingTop="5dp"
                    android:padding="10dp"
                    app:helperText="*Requirido"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_CoinSymbol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:strokeColor="@color/green_light"
                        android:hint="@string/symbol_coin" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_create"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_registrar"
                    android:layout_marginTop="@dimen/universal_paddding2"
                    android:layout_marginRight="@dimen/input_registrar"
                    android:padding="10dp"
                    android:textColor="@color/green"
                    android:text="@string/save_coin"
                    android:textSize="20sp"
                    app:strokeColor="@color/green_light">

                </Button>
                <Button
                    android:id="@+id/btn_second_view"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_registrar"
                    android:layout_marginTop="@dimen/universal_paddding2"
                    android:layout_marginRight="@dimen/input_registrar"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textColor="@color/green"
                    android:text="@string/nexto_to"
                    android:textSize="20sp"
                    app:strokeColor="@color/green_light">

                </Button>
            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>