<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MonedaDetalle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="17sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_country_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvCoinName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_coin"
                        android:textSize="17sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_name_country_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvCoinSymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_symbol"
                        android:textSize="17sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_symbol_country_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="right"
                    android:visibility="visible"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvCoinName_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guardar"
                        android:textSize="23sp"
                        android:visibility="gone"
                        android:layout_marginRight="20dp"
                        android:padding="10dp"
                        android:textColor="@color/green_light"/>
                    <TextView
                        android:id="@+id/tvCoinName_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editar"
                        android:textSize="23sp"
                        android:layout_marginRight="20dp"
                        android:padding="10dp"
                        android:textColor="@color/green_light"/>
                    <TextView
                        android:id="@+id/tvCoin_exchange_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agregar_tazas_de_cambio"
                        android:textSize="18sp"
                        android:padding="10dp"
                        android:textColor="@color/logo"/>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvExchangeRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tasa de Cambio"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:stretchColumns="*">
                <TableRow
                    android:id="@+id/t_row1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/logo">
                    <TextView
                        android:id="@+id/tvid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="10dp"
                        android:text="@string/id"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/tvCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/moneda"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvExchange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/cambio"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </TableRow>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_load"
                        android:visibility="gone"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_gravity="left"
                        android:textAlignment="center"
                        android:textColor="#3A4693"
                        android:textSize="13sp"
                        android:typeface="normal"
                        app:strokeColor="#52BEFF"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>