<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCoinName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_coin"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/et_name_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCoinSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coin_symbol"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/et_symbol_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="visible"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_delete_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrar"
                    android:textSize="23sp"
                    android:padding="10dp"
                    android:textColor="@color/red"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>